k8s/calculation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculation-deployment
  labels:
    app: calculation
spec:
  selector:
    matchLabels:
      app: calculation
  template:
    metadata:
      labels:
        app: calculation
    spec:
      containers:
      - name: calculation-service
        image: seregy/calculation-service:0.0.1
        ports:
        - containerPort: 8080
