k8s/calculation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculation
spec:
  selector:
    app: calculation
  ports:
    - protocol: TCP
      port: 8080
