k8s/calculation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculation-ingress
spec:
  rules:
  - http:
      paths:
      - path: /calculation
        pathType: Prefix
        backend:
          service:
            name: calculation
            port:
              number: 8080
